// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Edits organization affiliation correctly: default selected item 1`] = `
<span
  class="ant-select-selection-item-content"
>
  Test Team 3
</span>
`;

exports[`Edits organization affiliation correctly: default selected item 2`] = `
<span
  class="ant-select-selection-item-content"
>
  Test Team 4
</span>
`;

exports[`Edits organization affiliation correctly: first row containing ona office loc details 1`] = `
<td
  class="ant-table-cell"
>
  Ona Office Sub Location
</td>
`;

exports[`Edits organization affiliation correctly: first row containing ona office loc details 2`] = `
<td
  class="ant-table-cell"
>
  Test Team 3, Test Team 4
</td>
`;

exports[`Edits organization affiliation correctly: first row containing ona office loc details 3`] = `
<td
  class="ant-table-cell"
>
  <button
    class="ant-btn css-dev-only-do-not-override-k7429z ant-btn-link action-button"
    type="button"
  >
    <span>
      Edit
    </span>
  </button>
</td>
`;

exports[`Edits organization affiliation correctly: user defined root location 1`] = `
<span
  title="Ona Office Sub Location"
>
  Ona Office Sub Location
</span>
`;

exports[`Edits organization affiliation correctly: visible nodes on expand 1`] = `
<span
  class="ant-tree-title"
>
  <span
    title="Ona Office Sub Location"
  >
    Ona Office Sub Location
  </span>
</span>
`;

exports[`Edits organization affiliation correctly: visible nodes on expand 2`] = `
<span
  class="ant-tree-title"
>
  <span
    title="Level 0"
  >
    Level 0
  </span>
</span>
`;

exports[`Edits organization affiliation correctly: visible nodes on expand 3`] = `
<span
  class="ant-tree-title"
>
  <span
    title="Arundel mobile clinic"
  >
    Arundel mobile clinic
  </span>
</span>
`;

exports[`Edits organization affiliation correctly: visible nodes on expand 4`] = `
<span
  class="ant-tree-title"
>
  <span
    title="Part Of Sub Location"
  >
    Part Of Sub Location
  </span>
</span>
`;

exports[`Edits organization affiliation correctly: visible nodes on expanding part of sub location 1`] = `
<span
  class="ant-tree-title"
>
  <span
    title="Ona Office Sub Location"
  >
    Ona Office Sub Location
  </span>
</span>
`;

exports[`Edits organization affiliation correctly: visible nodes on expanding part of sub location 2`] = `
<span
  class="ant-tree-title"
>
  <span
    title="Level 0"
  >
    Level 0
  </span>
</span>
`;

exports[`Edits organization affiliation correctly: visible nodes on expanding part of sub location 3`] = `
<span
  class="ant-tree-title"
>
  <span
    title="Arundel mobile clinic"
  >
    Arundel mobile clinic
  </span>
</span>
`;

exports[`Edits organization affiliation correctly: visible nodes on expanding part of sub location 4`] = `
<span
  class="ant-tree-title"
>
  <span
    title="Part Of Sub Location"
  >
    Part Of Sub Location
  </span>
</span>
`;

exports[`Edits organization affiliation correctly: visible nodes on expanding part of sub location 5`] = `
<span
  class="ant-tree-title"
>
  <span
    title="Nairobii"
  >
    Nairobii
  </span>
</span>
`;

exports[`Edits organization affiliation correctly: visible nodes on expanding part of sub location 6`] = `
<span
  class="ant-tree-title"
>
  <span
    title="Test Sub Loc"
  >
    Test Sub Loc
  </span>
</span>
`;

exports[`Edits organization affiliation correctly: visible nodes on expanding part of sub location 7`] = `
<span
  class="ant-tree-title"
>
  <span
    title="Test Loc 113"
  >
    Test Loc 113
  </span>
</span>
`;

exports[`Edits organization affiliation correctly: visible nodes on expanding part of sub location 8`] = `
<span
  class="ant-tree-title"
>
  <span
    title="Test Loc 1145"
  >
    Test Loc 1145
  </span>
</span>
`;

exports[`Edits organization affiliation correctly: visible nodes on expanding part of sub location 9`] = `
<span
  class="ant-tree-title"
>
  <span
    title="MOH HQ 2"
  >
    MOH HQ 2
  </span>
</span>
`;
